--- a/src/dspy-name-marquee.ui
+++ b/src/dspy-name-marquee.ui
@@ -1,108 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk" version="4.0"/>
-  <template class="DspyNameMarquee" parent="GtkWidget">
+  <template class="DspyNameMarquee" parent="AdwPreferencesGroup">
     <child>
-      <object class="GtkGrid" id="grid">
-        <property name="margin-start">12</property>
-        <property name="column-spacing">12</property>
-        <property name="row-spacing">3</property>
-        <child>
-          <object class="GtkLabel">
-            <property name="label" translatable="yes">Bus Address</property>
-            <property name="xalign">1.0</property>
-            <style>
-              <class name="dim-label"/>
-            </style>
-            <layout>
-              <property name="row">0</property>
-              <property name="column">0</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel" id="label_bus">
-            <property name="xalign">0.0</property>
-            <property name="selectable">1</property>
-            <property name="ellipsize">end</property>
-            <layout>
-              <property name="row">0</property>
-              <property name="column">1</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel">
-            <property name="label" translatable="yes">Name</property>
-            <property name="xalign">1.0</property>
-            <style>
-              <class name="dim-label"/>
-            </style>
-            <layout>
-              <property name="row">1</property>
-              <property name="column">0</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel" id="label_name">
-            <property name="xalign">0.0</property>
-            <property name="selectable">1</property>
-            <property name="ellipsize">end</property>
-            <layout>
-              <property name="row">1</property>
-              <property name="column">1</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel">
-            <property name="label" translatable="yes">Owner</property>
-            <property name="xalign">1.0</property>
-            <style>
-              <class name="dim-label"/>
-            </style>
-            <layout>
-              <property name="row">2</property>
-              <property name="column">0</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel" id="label_owner">
-            <property name="xalign">0.0</property>
-            <property name="selectable">1</property>
-            <property name="ellipsize">end</property>
-            <layout>
-              <property name="row">2</property>
-              <property name="column">1</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel">
-            <property name="label" translatable="yes">Process ID</property>
-            <property name="xalign">1.0</property>
-            <style>
-              <class name="dim-label"/>
-            </style>
-            <layout>
-              <property name="row">3</property>
-              <property name="column">0</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel" id="label_pid">
-            <property name="xalign">0.0</property>
-            <property name="selectable">1</property>
-            <property name="ellipsize">end</property>
-            <layout>
-              <property name="row">3</property>
-              <property name="column">1</property>
-            </layout>
-          </object>
-        </child>
+      <object class="AdwActionRow">
+        <property name="title" translatable="yes">Bus Address</property>
+        <binding name="subtitle">
+          <lookup name="address" type="DspyConnection">
+            <lookup name="connection" type="DspyName">
+              <lookup name="name">DspyNameMarquee</lookup>
+            </lookup>
+          </lookup>
+        </binding>
+        <style>
+          <class name="property"/>
+        </style>
+      </object>
+    </child>
+    <child>
+      <object class="AdwActionRow">
+        <property name="title" translatable="yes">Name</property>
+        <binding name="subtitle">
+          <lookup name="name" type="DspyName">
+            <lookup name="name">DspyNameMarquee</lookup>
+          </lookup>
+        </binding>
+        <style>
+          <class name="property"/>
+        </style>
+      </object>
+    </child>
+    <child>
+      <object class="AdwActionRow">
+        <property name="title" translatable="yes">Owner</property>
+        <binding name="subtitle">
+          <lookup name="owner" type="DspyName">
+            <lookup name="name">DspyNameMarquee</lookup>
+          </lookup>
+        </binding>
+        <style>
+          <class name="property"/>
+        </style>
+      </object>
+    </child>
+    <child>
+      <object class="AdwActionRow">
+        <property name="title" translatable="yes">Process ID</property>
+        <binding name="subtitle">
+          <lookup name="pid" type="DspyName">
+            <lookup name="name">DspyNameMarquee</lookup>
+          </lookup>
+        </binding>
+        <style>
+          <class name="property"/>
+        </style>
       </object>
     </child>
   </template>
