--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -155,28 +155,32 @@
             <child>
               <object class="GtkStackPage" id="introspect">
                 <property name="child">
-                  <object class="GtkBox">
-                    <property name="margin-start">12</property>
-                    <property name="margin-end">12</property>
-                    <property name="margin-top">12</property>
-                    <property name="margin-bottom">12</property>
-                    <property name="orientation">vertical</property>
-                    <property name="spacing">12</property>
-                    <child>
-                      <object class="DspyNameMarquee" id="name_marquee"/>
-                    </child>
+                  <object class="AdwPreferencesPage">
                     <child>
                       <object class="GtkBox">
+                        <property name="margin-start">12</property>
+                        <property name="margin-end">12</property>
+                        <property name="margin-top">12</property>
+                        <property name="margin-bottom">12</property>
                         <property name="orientation">vertical</property>
+                        <property name="spacing">12</property>
                         <child>
-                          <object class="GtkFrame">
+                          <object class="DspyNameMarquee" id="name_marquee"/>
+                        </child>
+                        <child>
+                          <object class="GtkBox">
+                            <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkScrolledWindow">
-                                <property name="vexpand">true</property>
+                              <object class="GtkFrame">
                                 <child>
-                                  <object class="DspyTreeView" id="introspection_tree_view">
-                                    <child internal-child="selection">
-                                      <object class="GtkTreeSelection"/>
+                                  <object class="GtkScrolledWindow">
+                                    <property name="vexpand">true</property>
+                                    <child>
+                                      <object class="DspyTreeView" id="introspection_tree_view">
+                                        <child internal-child="selection">
+                                          <object class="GtkTreeSelection"/>
+                                        </child>
+                                      </object>
                                     </child>
                                   </object>
                                 </child>
@@ -184,14 +188,14 @@
                             </child>
                           </object>
                         </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="DspyMethodView" id="method_view">
-                        <property name="margin-start">12</property>
-                        <style>
-                          <class name="methodview"/>
-                        </style>
+                        <child>
+                          <object class="DspyMethodView" id="method_view">
+                            <property name="margin-start">12</property>
+                            <style>
+                              <class name="methodview"/>
+                            </style>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
