--- a/src/dspy-view.ui
+++ b/src/dspy-view.ui
@@ -92,7 +92,7 @@
                         <child>
                           <object class="GtkMenuButton" id="menu_button">
                             <property name="focus-on-click">0</property>
-                            <property name="icon-name">pan-down-symbolic</property>
+                            <property name="icon-name">list-add-symbolic</property>
                             <style>
                               <class name="flat"/>
                             </style>
