--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -5,7 +5,7 @@
   <template class="DspyWindow" parent="AdwApplicationWindow">
     <property name="default_width">600</property>
     <property name="default_height">300</property>
-    <property name="title">D-Spy</property>
+    <property name="title" translatable="yes">D-Spy</property>
     <child>
       <object class="GtkShortcutController">
         <child>
